<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Login Activity -->
    
    <string name="unable_login">Trouble logging in?</string>
    <string name="logo">minitrainer logo</string>
    
    <string name="tab_register">Register</string>
    <string name="tab_login">Login</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>

    <string name="hint_reg_username">Choose a username</string>
    <string name="hint_reg_password">And a password</string>
    <string name="hint_reg_email">Your email address</string>
    
    <string name="button_register">Begin!</string>
    <string name="button_login">Go!</string>
    <string name="chbox_save_dets">Remember me</string>
    
    <string name="text_recovery_info">Account details will be sent to your email address</string>

    <!-- Main -->
    <string name="app_name">Minitrainer</string>
    <string name="app_logo">Minitrainer_logo</string>
    <string name="menu_settings">Settings</string>
    <string name="button_exDiets">Exercises and Diets</string>
    <string name="button_prof">Profile</string>
    <string name="button_activities">Activities</string>
    <string name="button_prefs">Preferences</string>

    <!-- Exercise Activity -->

    <string name="text_pushups">Simple pushups</string>
    <string name="text_crunches">Crunches</string>
    <string name="text_squats">Squats</string>
    <string name="text_ex1_step1">1.Take a prone position on the floor or other rigid surface that\'s able to support your body weight.Keep your feet together!</string>
    <string name="text_ex1_step2">2.Position hands palms-down on the floor, approximately shoulder width apart.</string>
    <string name="text_ex1_step3">3.Raise yourself using your arms then lower your torso to the ground until your elbows form a 90 degree angle.</string>
    <string name="text_ex1_step4">4.Raise yourself using your arms then lower your torso to the ground until your elbows form a 90 degree angle.</string>
    <string name="text_complete_ex_button">Complete exercise</string>
    <string name="text_ex2_step1">1.Lie on your back on the floor.</string>
    <string name="text_ex2_step2">2.Bend your knees. Your feet can be flat on the floor, or you can keep them suspended in the air during your crunches for a little extra crunch.</string>
    <string name="text_ex2_step3">3.Cross your arms in front of your chest.Your head and neck should be resting on your hands.</string>
    <string name="text_ex2_step4">4.Curl your back to lift your shoulders towards the ceiling (not towards your knees) using strictly your abdominal muscles. It is very important not to lift your entire back off the floor, as this can cause back strain.</string>
    <string name="text_ex3_step1">1.Place your feet about shoulder width apart, feet angled out slightly.</string>
    <string name="text_ex3_step2">2.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna </string>
    <string name="text_ex3_step3">2.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna  </string>

    <!-- Diet Activity -->

    <string name="text_muscleGain">Muscle gain</string>
    <string name="text_weightLoss">Weight loss</string>
    <string name="text_getRipped">Get ripped</string>
    <string name="text_breakfast">Breakfast</string>
    <string name="text_snack">Snack</string>
    <string name="text_lunch">Lunch</string>
    <string name="text_dinner">Dinner</string>
    <string name="text_preWO">Pre-workout</string>
    <string name="text_postWO">Post-workout</string>
    <string name="text_d1_breakfast">3 whole eggs, 2 egg white\nGrilled bacon\n1 tomato\n2 bagels\nFruit juice (0.5l)</string>
    <string name="text_d1_snack1">Cottage cheese on 6 crackers\n1 banana</string>
    <string name="text_d1_lunch">Baked potato\nTuna\nCheese\nProtein shake</string>
    <string name="text_d1_snack2">1 wholegrain bagel\nSmoked salmon(80g)\nCottage cheese\nProtein shake</string>
    <string name="text_d1_dinner">Protein shake\nChicken (or beef fajitas)</string>
    <string name="text_d1_snack3">All-bran muffin or carrot cake</string>
    <string name="text_d2_breakfast">Ham and mushroom omelette</string>
    <string name="text_d2_snack1">Nuts and fish oil</string>
    <string name="text_d2_lunch">Homemade tuna salad</string>
    <string name="text_d2_snack2">Chicken and vegetables</string>
    <string name="text_d2_snack3">Protein shake and fruit</string>
    <string name="text_d2_dinner">Chicken stir fry with brown rice</string>
    <string name="text_d3_breakfast">4 egg whites(scrambled, fried or omelette)\nWholegrain bread(2 slices)\nOats(50g)\nMilk</string>
    <string name="text_d3_snack1">2 oatcakes and 2 apples</string>
    <string name="text_d3_lunch">Turkey(150g)\nSwiss cheese and salad on wholegrain bread</string>
    <string name="text_d3_snack2">Protein shake\n2 pieces of citrus fruit\nblack coffee</string>
    <string name="text_d3_dinner">Stir fried chicken(150g), brown rice\n(1 cup) and broccoli</string>
    <string name="text_d3_snack3">Frozen yoghurt (200ml) and protein shake</string>

    <!-- Tabs Main -->
    <string name="title_activity_tabbed">Minitrainer</string>

    <!-- Tab 1 -->
    <string name="text_tab1">Do you want to exercise or look up a diet?</string>
    <string name="text_exButton"></string>
    <string name="text_dButton"></string>

    <!-- Tab 2 -->
    <string name="text_tab2">Profile</string>
    <string name="text_progress">Progress</string>
    <string name="text_level">Level:</string>
    <string name="text_experience">Experience gained:</string>
    <string name="text_value_currentLvl">x</string>
    <string name="text_value_currentExp">x</string>
    <string name="text_compExToday">Completed exercises today:</string>
    <string name="text_value_compExToday">0</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_yourPerfToday">Your performance today:</string>
    <string name="text_default_perf">You did a good job!</string>
    <string name="hint_heightEx">Height e.g. 186(cm)</string>
    <string name="hint_weightEx">Weight e.g. 73.5(kg)</string>
    <string name="text_button_bmi">Calculate BMI</string>
    <string name="text_default_BMI">N/A</string>
    <string name="text_bmiTag">Your BMI is:</string>
    <string name="text_na">N/A</string>
    <string name="text_tapHere">Tap to calculate</string>
    <string name="text_default_feedback">No feedback yet</string>

    <!-- Tab 3 -->
    <string name="text_tab3">Activities</string>

    <!-- Quiz -->

    <string name="q1">Which of these foods is the richest in Calcium?</string>
    <string name="q1A">A) Cheese</string>
    <string name="q1B">B) Milk</string>
    <string name="q1C">C) Almonds</string>
    <string name="q1D">D) Brazil Nuts</string>
    <string name="q2">How much weight does water make up in our bodies?</string>
    <string name="q2A">A) 50%</string>
    <string name="q2B">B) 60%</string>
    <string name="q2C">C) 45%</string>
    <string name="q2D">D) 70%</string>
    <string name="q3">Which have the most Vitamin C?</string>
    <string name="q3A">A) Bell Peppers</string>
    <string name="q3B">B) Oranges</string>
    <string name="q3C">C) Lemons</string>
    <string name="q3D">D) Kiwis</string>
    <string name="q4">Which is the richest in Vitamin A?</string>
    <string name="q4A">A) Tomato</string>
    <string name="q4B">B) Carrot</string>
    <string name="q4C">C) Liver</string>
    <string name="q4D">D) Lettuce</string>
    <string name="q5">Which of these has the highest amount of Iron in it?</string>
    <string name="q5A">A) Liver</string>
    <string name="q5B">B) Dark Chocolate</string>
    <string name="q5C">C) Beans</string>
    <string name="q5D">D) Nuts</string>
    <string name="q6">Which of these have the most Zinc?</string>
    <string name="q6A">A) Dried Bananas</string>
    <string name="q6B">B) Raspberries</string>
    <string name="q6C">C) Avocados</string>
    <string name="q6D">D) Dried Apricots</string>
    <string name="q7">Which of these has the highest Cholesterol?</string>
    <string name="q7A">A) Caviar</string>
    <string name="q7B">B) Cheese</string>
    <string name="q7C">C) Liver</string>
    <string name="q7D">D) Egg Yolk</string>
    <string name="q8">Which one has the most protein?</string>
    <string name="q8A">A) Turkey Breast</string>
    <string name="q8B">B) Beans</string>
    <string name="q8C">C) Tuna, Salmon</string>
    <string name="q8D">D) Eggs</string>
    <string name="q9">Which way of cooking eggs isn\'t the best one?</string>
    <string name="q9A">A) Poaching</string>
    <string name="q9B">B) Frying</string>
    <string name="q9C">C) Omelette</string>
    <string name="q9D">D) Scrambled</string>
    <string name="text_qNum">Question # x</string>
    <string name="text_question">Nothing to ask yet</string>
    <string name="text_choiceA"></string>
    <string name="text_choiceB"></string>
    <string name="text_choiceC"></string>
    <string name="text_choiceD"></string>

    <!-- Test -->
    <string name="out">txview</string>
    <string name="title_activity_profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_activity_diet">DietActivity</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>

</resources>