<?xml version="1.0" encoding="utf-8"?>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/svEx"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">

<LinearLayout 
    android:orientation="vertical"
    android:background="#acb1b4"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button
	    android:id="@+id/exButton1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/text_pushups"
	    android:textSize="20sp" />

    <LinearLayout 
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/exPanel1"
        android:background="#ff888888" >

        	<TextView
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="5dp"
        	    android:layout_marginRight="5dp"
        	    android:layout_marginTop="5dip"
        	    android:text="@string/text_ex1_step1"
        	    android:textColor="#ffffff"
        	    android:textSize="16sp" />

        	<TextView
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="5dp"
        	    android:layout_marginRight="5dp"
        	    android:layout_marginTop="5dip"
        	    android:text="@string/text_ex1_step2"
        	    android:textColor="#ffffff"
        	    android:textSize="16sp" />
        	
        	<TextView
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="5dp"
        	    android:layout_marginRight="5dp"
        	    android:layout_marginTop="5dip"
        	    android:text="@string/text_ex1_step3"
        	    android:textColor="#ffffff"
        	    android:textSize="16sp" />
      
        	<ImageView
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:layout_marginBottom="5dp"
        	    android:layout_marginTop="5dp"
        	    android:src="@drawable/pushups" />
        	
        	<TextView
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginBottom="5dp"
        	    android:layout_marginLeft="5dp"
        	    android:layout_marginRight="5dp"
        	    android:text="@string/text_ex1_step4"
        	    android:textColor="#ffffff"
        	    android:textSize="16sp" />

        	<Button
        	    android:id="@+id/complete_ex1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:text="@string/text_complete_ex_button"
        	    android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/exButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_crunches"
        android:textSize="20sp" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/exPanel2"
        android:background="#ff888888" >

         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:layout_marginTop="5dip"
         	    android:text="@string/text_ex2_step1"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />

         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:layout_marginTop="5dip"
         	    android:text="@string/text_ex2_step2"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />
    
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
               android:src="@drawable/crunches" />
         	
         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:text="@string/text_ex2_step3"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />
         	
         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginBottom="5dp"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:layout_marginTop="5dip"
         	    android:text="@string/text_ex2_step4"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />
    
        	<Button
        	    android:id="@+id/complete_ex2"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:text="@string/text_complete_ex_button"
        	    android:textSize="18sp" />

	</LinearLayout>
	
        <Button
            android:id="@+id/exButton3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_squats"
            android:textSize="20sp" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/exPanel3"
        android:background="#ff888888" >

         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:layout_marginTop="5dip"
         	    android:text="@string/text_ex3_step1"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />

         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:layout_marginTop="5dip"
         	    android:text="@string/text_ex3_step2"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />
    
           <ImageView
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:src="@drawable/squats" />
         	
         	<TextView
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:layout_marginBottom="5dp"
         	    android:layout_marginLeft="5dp"
         	    android:layout_marginRight="5dp"
         	    android:layout_marginTop="5dip"
         	    android:text="@string/text_ex3_step3"
         	    android:textColor="#ffffff"
         	    android:textSize="16sp" />
    
        	<Button
        	    android:id="@+id/complete_ex3"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center"
        	    android:text="@string/text_complete_ex_button"
        	    android:textSize="18sp" />

	</LinearLayout>

</LinearLayout>

</ScrollView>